--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,4 @@
-<header>
+`<header>
     <nav class="navbar navbar-expand-lg fixed-top navbar-light mb-5 shadow">
         <a class="navbar-brand text-white font-weight-bold" href="/">Starbook <span
                 class="navbar-text text-info font-italic text-left"> A space trip!
@@ -12,12 +12,21 @@
                 <li class="nav-item active">
                     <a class="nav-link text-info" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
+                {{#if user}}
+                <li class="nav-item active">
+                    <a class="nav-link text-info" href="/newsfeed">Newsfeed <span class="sr-only">(current)</span></a>
+                </li>
+                <li>
+                <a class="nav-link text-info" href="/logout">Log out</a>
+                </li>
+                {{else}}
                 <li class="nav-item">
                     <a class="nav-link text-white" href="/login">Login</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" href="/signup">Signup</a>
                 </li>
+                {{/if}}
             </ul>
         </div>
     </nav>
@@ -55,27 +64,4 @@
     <img class="star" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/106114/neon-star10.png">
 </aside>
 
-{{!-- TO BE MOVED TO A NEW PAGE, STILL TO CREATE --}}
 
-<div>
-    <ul>
-        {{#each users}}
-        <li>
-            <a href="/profile/{{id}}">{{this.username}}</a>
-        </li>
-        {{/each}}
-    </ul>
-</div>
-
-<div>
-    New Posts
-    <ul>
-        {{#each posts}}
-        <li>
-            {{this.title}}
-            {{this.body}}
-            {{this.postedBy.username}}
-        </li>
-        {{/each}}
-    </ul>
-</div>
