--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,4 @@
-`<header>
+<header>
     <nav class="navbar navbar-expand-lg fixed-top navbar-light mb-5 shadow">
         <a class="navbar-brand text-white font-weight-bold" href="/">Starbook <span
                 class="navbar-text text-info font-italic text-left"> A space trip!
@@ -31,8 +31,6 @@
         </div>
     </nav>
 </header>
-
-<main>
 
     <div class="container text-white distanceBar">
         <div class="container quotes">
