--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,44 +14,47 @@
   <link rel="stylesheet" href="../stylesheets/style.css" />
 </head>
 
-  <body>
+<body>
 
-    {{{body}}}
+  {{{body}}}
 
+  <span class="containerCursor"></span>
 
-    {{!-- <div>“The Force will be with you. Always.”<span>obi-wan kenobi</span></div> --}}
+  {{!-- <div>“The Force will be with you. Always.”<span>obi-wan kenobi</span></div> --}}
 
-    <footer class="fixed-bottom">
-      <div class="card">
-        <div>
-          <p class="footer-quote text-center">© 2020 Copyright:<span><a class="copywrite"
-                href="https://github.com/anastezia-kz" target="_blank"> anastezia-kz</a> & <a class="copywrite"
-                href="https://github.com/teo-23" target="_blank"> teo-23</a></span></p>
-        </div>
+  <footer class="fixed-bottom">
+    <div class="card">
+      <div>
+        <p class="footer-quote text-center">© 2020 Copyright:<span><a class="copywrite"
+              href="https://github.com/anastezia-kz" target="_blank"> anastezia-kz</a> & <a class="copywrite"
+              href="https://github.com/teo-23" target="_blank"> teo-23</a></span></p>
       </div>
-    </footer>
+    </div>
+  </footer>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-    </script>
-    <script src="/javascripts/script.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+  </script>
+  {{!-- script with cursor effects --}}
+  <script src="/javascripts/script.js"></script>
 
-    {{!-- animations gsap --}}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/EasePack.min.js"></script>
+  {{!-- animations gsap --}}
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/EasePack.min.js"></script>
 
-    {{!-- SCRIPT STARS --}}
-    <script src="/javascripts/scriptStars.js"></script>
+  {{!-- SCRIPT STARS --}}
+  <script src="/javascripts/scriptStars.js"></script>
 
-    {{!-- Google sign in --}}
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
-  </body>
+  {{!-- Google sign in --}}
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+
+</body>
 
 
 </html>
