--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-lg fixed-top navbar-light mb-5 shadow">
+  <nav class="navbar navbar-expand-lg fixed-top navbar-light mb-5">
     <a class="navbar-brand text-white font-weight-bold" href="/">Starbook <span class="navbar-text text-info font-italic"> enter the deep space!</span></a>
     
     <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarResponsive"
