--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-lg fixed-top navbar-light mb-5 shadow">
+  <nav class="navbar navbar-expand-lg fixed-top navbar-light mb-5">
     <a class="navbar-brand text-white font-weight-bold" href="/">Starbook <span
         class="navbar-text text-info font-italic"> once in a lifetime opportunity</span></a>
 
